--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -23,8 +23,8 @@ PB6.GPIO_Label=Audio_SCL [CS43L22_SCL]
 PD4.Locked=true
 PC15-OSC32_OUT.GPIO_Label=PC15-OSC32_OUT
 PinOutPanel.RotationAngle=0
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 PA6.GPIO_Mode=GPIO_MODE_AF_PP
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PD14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -32,13 +32,16 @@ PD15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA4.Mode=Half_Duplex_Master
 SPI1.Direction=SPI_DIRECTION_2LINES
 I2S3.AudioFreq-Half_Duplex_Master=I2S_AUDIOFREQ_96K
+TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,TIM_MasterOutputTrigger,ClockDivision
 PD4.Signal=GPIO_Output
 RCC.APB2TimFreq_Value=168000000
 PB6.Signal=I2C1_SCL
 PC7.Signal=I2S3_MCK
 USB_HOST0.BSP.component=
+SPI1.CalculateBaudRate=42.0 MBits/s
 PB6.Mode=I2C
 PC3.Signal=I2S2_SD
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 PE1.Signal=GPXTI1
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -51,6 +54,7 @@ I2S3.ErrorAudioFreq=-2.34 %
 ProjectManager.BackupPrevious=false
 PA5.GPIO_PuPd=GPIO_NOPULL
 I2S3.ErrorAudioFreq-Half_Duplex_Master=0.8 %
+NVIC.TIM2_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
 PH1-OSC_OUT.Locked=true
 PD5.GPIO_Mode=GPIO_MODE_INPUT
 PD14.GPIO_PuPd=GPIO_NOPULL
@@ -63,6 +67,7 @@ SPI1.CalculateBaudRate-Full_Duplex_Master=42.0 MBits/s
 RCC.MCO2PinFreq_Value=168000000
 Mcu.Package=LQFP100
 PB9.Signal=I2C1_SDA
+TIM2.Prescaler=839
 PA5.Locked=true
 PD12.Signal=GPIO_Output
 PD5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -85,11 +90,12 @@ PA4.GPIO_Label=I2S3_WS [CS43L22_LRCK]
 PD15.Signal=GPIO_Output
 ProjectManager.CustomerFirmwarePackage=
 PC0.PinState=GPIO_PIN_SET
+NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA5.Mode=Full_Duplex_Master
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
-Mcu.PinsNb=35
+Mcu.PinsNb=37
 PA9.GPIO_Label=VBUS_FS
 PB6.GPIO_PuPd=GPIO_NOPULL
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
@@ -99,6 +105,7 @@ PE1.GPIO_PuPd=GPIO_NOPULL
 PC0.Signal=GPIO_Output
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
+SH.S_TIM2_CH1_ETR.ConfNb=1
 PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
 PA0-WKUP.Signal=GPXTI0
@@ -121,30 +128,33 @@ ProjectManager.LastFirmware=true
 USB_HOST.VirtualModeFS=Cdc
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB2.GPIO_Mode=GPIO_MODE_INPUT
+Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin36=VP_USB_HOST_VS_USB_HOST_CDC_FS
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin30=PB6
+Mcu.Pin30=PB3
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin33=PE1
 PE3.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin34=VP_USB_HOST_VS_USB_HOST_CDC_FS
-Mcu.Pin31=PB9
-Mcu.Pin32=PE1
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin31=PB6
+Mcu.Pin32=PB9
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PH1-OSC_OUT.GPIO_Label=PH1-OSC_OUT
+TIM2.Period=1000
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-Mcu.Pin26=PC12
-Mcu.Pin27=PD4
+Mcu.Pin26=PC10
+Mcu.Pin27=PC12
 RCC.RTCHSEDivFreq_Value=4000000
 Mcu.Pin24=PA14
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PC10
-Mcu.Pin28=PD5
+Mcu.Pin25=PA15
+Mcu.Pin28=PD4
 PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
-Mcu.Pin29=PB3
+Mcu.Pin29=PD5
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA4.Signal=I2S3_WS
 Mcu.Pin22=PA12
@@ -162,6 +172,7 @@ PC12.GPIO_Label=I2S3_SD [CS43L22_SDIN]
 ProjectManager.CompilerOptimize=6
 PD15.Locked=true
 PA11.Signal=USB_OTG_FS_DM
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 ProjectManager.HeapSize=0x200
 Mcu.Pin15=PD13
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -177,6 +188,7 @@ Mcu.Pin11=PA7
 Mcu.Pin12=PB2
 Mcu.Pin10=PA6
 PE3.Signal=GPIO_Output
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC3.GPIO_Label=PDM_OUT [MP45DT02_DOUT]
 PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
 I2S3.Instance=SPI$Index
@@ -201,7 +213,7 @@ PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Signal=I2S3_CK
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_HOST_Init-USB_HOST-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_HOST_Init-USB_HOST-false-HAL-false,7-MX_TIM2_Init-TIM2-false-HAL-true
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -226,10 +238,11 @@ PA12.Signal=USB_OTG_FS_DP
 Mcu.UserConstants=
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=8
 RCC.I2SClocksFreq_Value=96000000
+Mcu.IPNb=9
 ProjectManager.PreviousToolchain=
 RCC.VcooutputI2S=96000000
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA4
@@ -261,6 +274,7 @@ PC7.GPIO_Mode=GPIO_MODE_AF_PP
 PE3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PB3.GPIOParameters=GPIO_Label
 PE3.Locked=true
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 USB_HOST0.BSP.i2creg=0
 PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
@@ -280,11 +294,14 @@ PD14.Locked=true
 RCC.LSI_VALUE=32000
 SH.GPXTI0.0=GPIO_EXTI0
 USB_OTG_FS.VirtualMode=Host_Only
+PA15.Signal=S_TIM2_CH1_ETR
 PA10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 USB_HOST0.BSP.name=Drive_VBUS_FS
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC14-OSC32_IN.GPIO_Label=PC14-OSC32_IN
 PC0.GPIO_PuPd=GPIO_NOPULL
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 PC14-OSC32_IN.Locked=true
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB3.Locked=true
@@ -297,7 +314,7 @@ PA7.Mode=Full_Duplex_Master
 PB9.GPIO_Label=Audio_SDA [CS43L22_SDA]
 PC10.GPIO_Label=I2S3_SCK [CS43L22_SCLK]
 ProjectManager.NoMain=false
-SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,Mode,VirtualType,Direction
+SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,Mode,VirtualType,Direction,BaudRatePrescaler,CalculateBaudRate
 USB_HOST0.BSP.solution=PC0
 PC10.Mode=Half_Duplex_Master
 USB_HOST.BSP.number=1
@@ -310,6 +327,7 @@ boardIOC=true
 PA9.GPIO_PuPd=GPIO_NOPULL
 PA12.GPIO_Label=OTG_FS_DP
 RCC.FamilyName=M
+TIM2.Pulse-PWM\ Generation1\ CH1=50
 PA0-WKUP.Locked=true
 PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
@@ -339,6 +357,7 @@ PA4.GPIO_Mode=GPIO_MODE_AF_PP
 RCC.APB2Freq_Value=84000000
 USB_HOST0.BSP.api=Unknown
 MxCube.Version=6.2.1
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PD4.GPIO_Label=Audio_RST [CS43L22_RESET]
 VP_SYS_VS_Systick.Mode=SysTick
 PD4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
@@ -353,9 +372,10 @@ ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F407V(E-G)Tx
 PA13.GPIO_Label=SWDIO
 PB2.Locked=true
+Mcu.IP8=USB_OTG_FS
 PD14.Signal=GPIO_Output
-Mcu.IP6=USB_HOST
-Mcu.IP7=USB_OTG_FS
+Mcu.IP6=TIM2
+Mcu.IP7=USB_HOST
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=48000000
 PB3.Signal=SYS_JTDO-SWO
