--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -32,7 +32,7 @@ PD15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA4.Mode=Half_Duplex_Master
 SPI1.Direction=SPI_DIRECTION_2LINES
 I2S3.AudioFreq-Half_Duplex_Master=I2S_AUDIOFREQ_96K
-TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,TIM_MasterOutputTrigger,ClockDivision
+TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger,ClockDivision
 PD4.Signal=GPIO_Output
 RCC.APB2TimFreq_Value=168000000
 PB6.Signal=I2C1_SCL
@@ -67,7 +67,7 @@ SPI1.CalculateBaudRate-Full_Duplex_Master=42.0 MBits/s
 RCC.MCO2PinFreq_Value=168000000
 Mcu.Package=LQFP100
 PB9.Signal=I2C1_SDA
-TIM2.Prescaler=839
+TIM2.Prescaler=8399
 PA5.Locked=true
 PD12.Signal=GPIO_Output
 PD5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -95,7 +95,7 @@ PA5.Mode=Full_Duplex_Master
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
-Mcu.PinsNb=37
+Mcu.PinsNb=36
 PA9.GPIO_Label=VBUS_FS
 PB6.GPIO_PuPd=GPIO_NOPULL
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
@@ -105,7 +105,6 @@ PE1.GPIO_PuPd=GPIO_NOPULL
 PC0.Signal=GPIO_Output
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
-SH.S_TIM2_CH1_ETR.ConfNb=1
 PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
 PA0-WKUP.Signal=GPXTI0
@@ -128,33 +127,32 @@ ProjectManager.LastFirmware=true
 USB_HOST.VirtualModeFS=Cdc
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB2.GPIO_Mode=GPIO_MODE_INPUT
-Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin36=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin35=VP_USB_HOST_VS_USB_HOST_CDC_FS
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin30=PB3
+Mcu.Pin30=PB6
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PE1
+Mcu.Pin33=VP_SYS_VS_Systick
 PE3.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin31=PB6
-Mcu.Pin32=PB9
+Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin31=PB9
+Mcu.Pin32=PE1
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PH1-OSC_OUT.GPIO_Label=PH1-OSC_OUT
-TIM2.Period=1000
+TIM2.Period=10000
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-Mcu.Pin26=PC10
-Mcu.Pin27=PC12
+Mcu.Pin26=PC12
+Mcu.Pin27=PD4
 RCC.RTCHSEDivFreq_Value=4000000
 Mcu.Pin24=PA14
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PA15
-Mcu.Pin28=PD4
+Mcu.Pin25=PC10
+Mcu.Pin28=PD5
 PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
-Mcu.Pin29=PD5
+Mcu.Pin29=PB3
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA4.Signal=I2S3_WS
 Mcu.Pin22=PA12
@@ -172,7 +170,6 @@ PC12.GPIO_Label=I2S3_SD [CS43L22_SDIN]
 ProjectManager.CompilerOptimize=6
 PD15.Locked=true
 PA11.Signal=USB_OTG_FS_DM
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 ProjectManager.HeapSize=0x200
 Mcu.Pin15=PD13
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -274,7 +271,6 @@ PC7.GPIO_Mode=GPIO_MODE_AF_PP
 PE3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PB3.GPIOParameters=GPIO_Label
 PE3.Locked=true
-TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 USB_HOST0.BSP.i2creg=0
 PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
@@ -294,7 +290,6 @@ PD14.Locked=true
 RCC.LSI_VALUE=32000
 SH.GPXTI0.0=GPIO_EXTI0
 USB_OTG_FS.VirtualMode=Host_Only
-PA15.Signal=S_TIM2_CH1_ETR
 PA10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 USB_HOST0.BSP.name=Drive_VBUS_FS
@@ -327,7 +322,6 @@ boardIOC=true
 PA9.GPIO_PuPd=GPIO_NOPULL
 PA12.GPIO_Label=OTG_FS_DP
 RCC.FamilyName=M
-TIM2.Pulse-PWM\ Generation1\ CH1=50
 PA0-WKUP.Locked=true
 PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
