--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -7,6 +7,7 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 PC10.GPIO_PuPd=GPIO_NOPULL
 SPI1.VirtualType=VM_MASTER
 PB10.GPIO_PuPd=GPIO_NOPULL
+SPI2.VirtualType=VM_MASTER
 PC12.Locked=true
 PA10.GPIO_PuPd=GPIO_NOPULL
 RCC.PLLCLKFreq_Value=168000000
@@ -21,8 +22,10 @@ RCC.RTCFreq_Value=32000
 PA6.GPIO_Label=SPI1_MISO [LIS302DL_SDO]
 PB6.GPIO_Label=Audio_SCL [CS43L22_SCL]
 PD4.Locked=true
+PB13.Signal=SPI2_SCK
 PC15-OSC32_OUT.GPIO_Label=PC15-OSC32_OUT
 PinOutPanel.RotationAngle=0
+PE6.GPIO_Label=DC_LCD
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 PA6.GPIO_Mode=GPIO_MODE_AF_PP
@@ -38,10 +41,11 @@ RCC.APB2TimFreq_Value=168000000
 PB6.Signal=I2C1_SCL
 PC7.Signal=I2S3_MCK
 USB_HOST0.BSP.component=
-SPI1.CalculateBaudRate=42.0 MBits/s
 PB6.Mode=I2C
+SPI1.CalculateBaudRate=42.0 MBits/s
 PC3.Signal=I2S2_SD
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+PE5.Signal=GPIO_Output
 PE1.Signal=GPXTI1
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -55,6 +59,8 @@ ProjectManager.BackupPrevious=false
 PA5.GPIO_PuPd=GPIO_NOPULL
 I2S3.ErrorAudioFreq-Half_Duplex_Master=0.8 %
 NVIC.TIM2_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
+PE4.GPIO_Label=CS_LCD
+SPI2.CalculateBaudRate=5.25 MBits/s
 PH1-OSC_OUT.Locked=true
 PD5.GPIO_Mode=GPIO_MODE_INPUT
 PD14.GPIO_PuPd=GPIO_NOPULL
@@ -69,23 +75,27 @@ Mcu.Package=LQFP100
 PB9.Signal=I2C1_SDA
 TIM2.Prescaler=839
 PA5.Locked=true
+SPI2.Mode=SPI_MODE_MASTER
 PD12.Signal=GPIO_Output
 PD5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA14.Locked=true
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-PB9.GPIO_PuPd=GPIO_NOPULL
 PA10.Signal=USB_OTG_FS_ID
+PB9.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB1TimFreq_Value=84000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 USB_OTG_FS.IPParameters=phy_itface,VirtualMode
 PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
+PB13.Mode=Full_Duplex_Master
+PE6.Locked=true
 PC12.GPIO_PuPd=GPIO_NOPULL
 PC15-OSC32_OUT.GPIOParameters=GPIO_Label
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA12.GPIO_PuPd=GPIO_NOPULL
 PD5.Locked=true
+PE6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.GPIO_Label=I2S3_WS [CS43L22_LRCK]
 PD15.Signal=GPIO_Output
 ProjectManager.CustomerFirmwarePackage=
@@ -95,9 +105,10 @@ PA5.Mode=Full_Duplex_Master
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
-Mcu.PinsNb=37
+Mcu.PinsNb=43
 PA9.GPIO_Label=VBUS_FS
 PB6.GPIO_PuPd=GPIO_NOPULL
+PC2.Signal=SPI2_MISO
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 SH.GPXTI0.ConfNb=1
 PA11.GPIO_Label=OTG_FS_DM
@@ -122,23 +133,29 @@ I2S3.VirtualMode=I2S_MODE_MASTER
 PC7.GPIO_PuPd=GPIO_NOPULL
 PB10.Signal=I2S2_CK
 PA5.Signal=SPI1_SCK
+Mcu.Pin40=VP_SYS_VS_Systick
+Mcu.Pin41=VP_TIM2_VS_ClockSourceINT
 PC12.Mode=Half_Duplex_Master
+Mcu.Pin42=VP_USB_HOST_VS_USB_HOST_CDC_FS
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 ProjectManager.LastFirmware=true
 USB_HOST.VirtualModeFS=Cdc
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB2.GPIO_Mode=GPIO_MODE_INPUT
-Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin36=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin37=PB6
+Mcu.Pin38=PB9
+Mcu.Pin35=PD5
+Mcu.Pin36=PB3
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin30=PB3
+Mcu.Pin39=PE1
+Mcu.Pin30=PA14
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PE1
+Mcu.Pin33=PC12
 PE3.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin31=PB6
-Mcu.Pin32=PB9
+Mcu.Pin34=PD4
+Mcu.Pin31=PA15
+Mcu.Pin32=PC10
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -146,47 +163,48 @@ PH1-OSC_OUT.GPIO_Label=PH1-OSC_OUT
 TIM2.Period=2000
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-Mcu.Pin26=PC10
-Mcu.Pin27=PC12
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PA14
+Mcu.Pin24=PC7
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PA15
-Mcu.Pin28=PD4
+Mcu.Pin25=PA9
+Mcu.Pin28=PA12
 PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
-Mcu.Pin29=PD5
+Mcu.Pin29=PA13
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA4.Signal=I2S3_WS
-Mcu.Pin22=PA12
+Mcu.Pin22=PD14
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin23=PA13
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
+Mcu.Pin23=PD15
+Mcu.Pin20=PD12
+Mcu.Pin21=PD13
 PA5.GPIO_Label=SPI1_SCK [LIS302DL_SCL/SPC]
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 PE3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA14.GPIOParameters=GPIO_Label
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+PE5.GPIO_Label=RESET_LCD
 PC12.GPIO_Label=I2S3_SD [CS43L22_SDIN]
 ProjectManager.CompilerOptimize=6
 PD15.Locked=true
 PA11.Signal=USB_OTG_FS_DM
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PD13
+Mcu.Pin15=PA7
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-Mcu.Pin16=PD14
-Mcu.Pin13=PB10
-Mcu.Pin14=PD12
-Mcu.Pin19=PA9
+Mcu.Pin16=PB2
+Mcu.Pin13=PA5
+Mcu.Pin14=PA6
+Mcu.Pin19=PB15
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PD15
-Mcu.Pin18=PC7
+Mcu.Pin17=PB10
+Mcu.Pin18=PB13
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
-Mcu.Pin11=PA7
-Mcu.Pin12=PB2
-Mcu.Pin10=PA6
+Mcu.Pin11=PA0-WKUP
+Mcu.Pin12=PA4
+Mcu.Pin10=PC3
 PE3.Signal=GPIO_Output
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC3.GPIO_Label=PDM_OUT [MP45DT02_DOUT]
@@ -222,12 +240,14 @@ PA11.Mode=Host_Only
 PH0-OSC_IN.GPIOParameters=GPIO_Label
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA11.GPIO_PuPd=GPIO_NOPULL
+PB15.Signal=SPI2_MOSI
+PE5.GPIOParameters=GPIO_Speed,GPIO_Label
 ProjectManager.StackSize=0x400
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 PD13.Signal=GPIO_Output
 Mcu.IP4=SPI1
 RCC.FCLKCortexFreq_Value=168000000
-Mcu.IP5=SYS
+Mcu.IP5=SPI2
 Mcu.IP2=NVIC
 PD13.Locked=true
 Mcu.IP3=RCC
@@ -235,30 +255,32 @@ Mcu.IP0=I2C1
 PA12.Locked=true
 Mcu.IP1=I2S3
 PA12.Signal=USB_OTG_FS_DP
+PE4.GPIOParameters=GPIO_Speed,GPIO_Label
 Mcu.UserConstants=
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=168000000
+Mcu.IPNb=10
 RCC.I2SClocksFreq_Value=96000000
-Mcu.IPNb=9
 ProjectManager.PreviousToolchain=
 RCC.VcooutputI2S=96000000
 TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
-Mcu.Pin6=PC3
-Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
+Mcu.Pin6=PH0-OSC_IN
+Mcu.Pin7=PH1-OSC_OUT
+Mcu.Pin8=PC0
+Mcu.Pin9=PC2
 USB_HOST0.BSP.ip=GPIO
 RCC.AHBFreq_Value=168000000
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.GPIO_Label=PH0-OSC_IN
 Mcu.Pin0=PE3
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin1=PE4
+Mcu.Pin2=PE5
 PA9.GPIO_Mode=GPIO_MODE_INPUT
-Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin3=PE6
+Mcu.Pin4=PC14-OSC32_IN
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-Mcu.Pin5=PC0
+Mcu.Pin5=PC15-OSC32_OUT
 RCC.HSE_VALUE=8000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA4.GPIO_PuPd=GPIO_NOPULL
@@ -268,6 +290,7 @@ PA6.GPIO_PuPd=GPIO_NOPULL
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 RCC.VCOInputFreq_Value=1000000
 PA14.Mode=Serial_Wire
+PE4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 File.Version=6
 PA10.GPIO_Label=OTG_FS_ID
 PC7.GPIO_Mode=GPIO_MODE_AF_PP
@@ -276,6 +299,8 @@ PB3.GPIOParameters=GPIO_Label
 PE3.Locked=true
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 USB_HOST0.BSP.i2creg=0
+PE4.Signal=GPIO_Output
+PE6.GPIOParameters=GPIO_Speed,GPIO_Label
 PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
 ProjectManager.ProjectName=STM32F407
@@ -300,6 +325,7 @@ TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 USB_HOST0.BSP.name=Drive_VBUS_FS
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC14-OSC32_IN.GPIO_Label=PC14-OSC32_IN
+SPI2.Direction=SPI_DIRECTION_2LINES
 PC0.GPIO_PuPd=GPIO_NOPULL
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 PC14-OSC32_IN.Locked=true
@@ -319,6 +345,7 @@ USB_HOST0.BSP.solution=PC0
 PC10.Mode=Half_Duplex_Master
 USB_HOST.BSP.number=1
 ProjectManager.DefaultFWLocation=true
+PC2.Mode=Full_Duplex_Master
 PD5.Signal=GPIO_Input
 ProjectManager.DeletePrevious=true
 PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
@@ -329,8 +356,8 @@ PA12.GPIO_Label=OTG_FS_DP
 RCC.FamilyName=M
 TIM2.Pulse-PWM\ Generation1\ CH1=100
 PA0-WKUP.Locked=true
-PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
+PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PD12.Locked=true
 PC12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA13.Signal=SYS_JTMS-SWDIO
@@ -343,6 +370,8 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 PB10.GPIO_Label=CLK_IN [MP45DT02_CLK]
 PB9.Mode=I2C
 PB2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
+PE4.Locked=true
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 ProjectManager.RegisterCallBack=
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PA7.GPIO_PuPd=GPIO_NOPULL
@@ -351,6 +380,7 @@ board=STM32F407G-DISC1
 PD13.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 RCC.VCOOutputFreq_Value=336000000
+PB15.Mode=Full_Duplex_Master
 PB9.GPIO_Mode=GPIO_MODE_AF_OD
 PA12.GPIO_Mode=GPIO_MODE_AF_PP
 PA4.GPIO_Mode=GPIO_MODE_AF_PP
@@ -367,15 +397,18 @@ PD13.GPIO_PuPd=GPIO_NOPULL
 PD5.GPIO_PuPd=GPIO_NOPULL
 PD14.GPIO_Label=LD5 [Red Led]
 PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
+PE5.Locked=true
+PE6.Signal=GPIO_Output
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F407V(E-G)Tx
 PA13.GPIO_Label=SWDIO
 PB2.Locked=true
-Mcu.IP8=USB_OTG_FS
+Mcu.IP8=USB_HOST
+Mcu.IP9=USB_OTG_FS
 PD14.Signal=GPIO_Output
-Mcu.IP6=TIM2
-Mcu.IP7=USB_HOST
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=48000000
 PB3.Signal=SYS_JTDO-SWO
@@ -395,6 +428,7 @@ RCC.PLLQ=7
 I2S3.RealAudioFreq=93.75 KHz
 RCC.PLLM=8
 RCC.PLLN=336
+PE5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE3.GPIO_Label=CS_I2C/SPI [LIS302DL_CS_I2C/SPI]
 PC7.Mode=Master_Clock_Activated
 PA11.GPIO_Mode=GPIO_MODE_AF_PP
