Run random generate figures on LCD

--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -106,7 +106,7 @@ PA5.Mode=Full_Duplex_Master
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
-Mcu.PinsNb=48
+Mcu.PinsNb=49
 PC13-ANTI_TAMP.GPIO_Label=T_IRQ
 PA9.GPIO_Label=VBUS_FS
 PC2.Signal=SPI2_MISO
@@ -133,15 +133,16 @@ PA9.Signal=USB_OTG_FS_VBUS
 PB9.Locked=true
 I2S3.VirtualMode=I2S_MODE_MASTER
 PC7.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin46=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin47=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin48=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin46=VP_SYS_VS_Systick
+Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
 PB10.Signal=I2S2_CK
 PA5.Signal=SPI1_SCK
 Mcu.Pin40=PB7
 Mcu.Pin41=PB8
 PC12.Mode=Half_Duplex_Master
 Mcu.Pin44=PE1
-Mcu.Pin45=VP_SYS_VS_Systick
+Mcu.Pin45=VP_RNG_VS_RNG
 Mcu.Pin42=PB9
 Mcu.Pin43=PE0
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
@@ -252,12 +253,12 @@ PE5.GPIOParameters=GPIO_Speed,GPIO_Label
 ProjectManager.StackSize=0x400
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 PD13.Signal=GPIO_Output
-Mcu.IP4=SPI2
+Mcu.IP4=SPI1
 RCC.FCLKCortexFreq_Value=168000000
-Mcu.IP5=SYS
+Mcu.IP5=SPI2
 PD13.Locked=true
 Mcu.IP2=RCC
-Mcu.IP3=SPI1
+Mcu.IP3=RNG
 Mcu.IP0=I2S3
 PA12.Locked=true
 Mcu.IP1=NVIC
@@ -266,7 +267,7 @@ PE4.GPIOParameters=GPIO_Speed,GPIO_Label
 Mcu.UserConstants=
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=9
+Mcu.IPNb=10
 RCC.I2SClocksFreq_Value=96000000
 ProjectManager.PreviousToolchain=
 RCC.VcooutputI2S=96000000
@@ -364,6 +365,7 @@ ProjectManager.DefaultFWLocation=true
 PC2.Mode=Full_Duplex_Master
 PD5.Signal=GPIO_Input
 ProjectManager.DeletePrevious=true
+VP_RNG_VS_RNG.Mode=RNG_Activate
 PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PB10.Locked=true
 boardIOC=true
@@ -385,6 +387,7 @@ PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 ProjectManager.TargetToolchain=STM32CubeIDE
 PB10.GPIO_Label=CLK_IN [MP45DT02_CLK]
 PB7.GPIOParameters=GPIO_Speed,GPIO_Label
+VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 PB2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE4.Locked=true
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
@@ -424,10 +427,11 @@ Mcu.Name=STM32F407V(E-G)Tx
 PE0.Signal=GPIO_Input
 PA13.GPIO_Label=SWDIO
 PB2.Locked=true
-Mcu.IP8=USB_OTG_FS
+Mcu.IP8=USB_HOST
+Mcu.IP9=USB_OTG_FS
 PD14.Signal=GPIO_Output
-Mcu.IP6=TIM2
-Mcu.IP7=USB_HOST
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=48000000
 PB3.Signal=SYS_JTDO-SWO
