Keyboard. Connect keyboard, and read char in main function. And measure how long it take time.

--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -12,10 +12,12 @@ PC12.Locked=true
 PA10.GPIO_PuPd=GPIO_NOPULL
 RCC.PLLCLKFreq_Value=168000000
 PC12.Signal=I2S3_SD
+PB14.GPIO_Label=KEYBOARD_COLUMN_1
 PA14.GPIO_Label=SWCLK
 RCC.PLLQCLKFreq_Value=48000000
 PC7.Locked=true
 I2S3.IPParameters=AudioFreq-Half_Duplex_Master,ErrorAudioFreq-Half_Duplex_Master,RealAudioFreq-Half_Duplex_Master,RealAudioFreq,ErrorAudioFreq,Instance,VirtualMode,FullDuplexMode
+PD8.Locked=true
 USB_HOST0.BSP.condition=
 PC3.Locked=true
 RCC.RTCFreq_Value=32000
@@ -42,6 +44,7 @@ PC7.Signal=I2S3_MCK
 USB_HOST0.BSP.component=
 SPI1.CalculateBaudRate=42.0 MBits/s
 PC3.Signal=I2S2_SD
+PD8.Signal=GPIO_Output
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 PE5.Signal=GPIO_Output
 PE1.Signal=GPXTI1
@@ -51,6 +54,7 @@ USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
 PB2.Signal=GPIO_Input
 PA4.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Input
+PB12.GPIO_Label=KEYBOARD_COLUMN_2
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
 MxDb.Version=DB.6.0.21
 I2S3.ErrorAudioFreq=-2.34 %
@@ -75,15 +79,18 @@ RCC.MCO2PinFreq_Value=168000000
 Mcu.Package=LQFP100
 PB9.Signal=I2C1_SDA
 TIM2.Prescaler=839
+PB14.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
 SPI2.Mode=SPI_MODE_MASTER
+PD11.Locked=true
 PD12.Signal=GPIO_Output
-PD5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA14.Locked=true
+PD5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA10.Signal=USB_OTG_FS_ID
 PB9.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
+PB14.GPIOParameters=GPIO_PuPd,GPIO_Label
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB1TimFreq_Value=84000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -106,14 +113,19 @@ PA5.Mode=Full_Duplex_Master
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
-Mcu.PinsNb=49
+PD9.GPIO_Label=KEYBOARD_ROW_3
+Mcu.PinsNb=57
+PD9.PinState=GPIO_PIN_RESET
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC13-ANTI_TAMP.GPIO_Label=T_IRQ
 PA9.GPIO_Label=VBUS_FS
 PC2.Signal=SPI2_MISO
+PB11.GPIO_Label=KEYBOARD_COLUMN_3
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 SH.GPXTI0.ConfNb=1
 PA11.GPIO_Label=OTG_FS_DM
 PE1.GPIO_PuPd=GPIO_NOPULL
+PB14.Locked=true
 PC0.Signal=GPIO_Output
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
@@ -124,46 +136,59 @@ PA0-WKUP.Signal=GPXTI0
 USB_HOST0.BSP.semaphore=
 PC3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 USB_HOST0.BSP.STBoard=false
+PD10.Signal=GPIO_Output
 PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_Label=T_CS
 PA11.Locked=true
 PB10.GPIO_Mode=GPIO_MODE_AF_PP
 PC15-OSC32_OUT.Locked=true
+Mcu.Pin51=PE1
+Mcu.Pin52=VP_RNG_VS_RNG
+Mcu.Pin50=PE0
+Mcu.Pin55=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin56=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin53=VP_SYS_VS_Systick
+Mcu.Pin54=VP_TIM2_VS_ClockSourceINT
 PA9.Signal=USB_OTG_FS_VBUS
+PB11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB9.Locked=true
 I2S3.VirtualMode=I2S_MODE_MASTER
 PC7.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin48=VP_USB_HOST_VS_USB_HOST_CDC_FS
-Mcu.Pin46=VP_SYS_VS_Systick
-Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin48=PB8
+Mcu.Pin49=PB9
+Mcu.Pin46=PB6
+Mcu.Pin47=PB7
 PB10.Signal=I2S2_CK
+PB14.Signal=GPIO_Input
 PA5.Signal=SPI1_SCK
-Mcu.Pin40=PB7
-Mcu.Pin41=PB8
+Mcu.Pin40=PA15
+Mcu.Pin41=PC10
 PC12.Mode=Half_Duplex_Master
-Mcu.Pin44=PE1
-Mcu.Pin45=VP_RNG_VS_RNG
-Mcu.Pin42=PB9
-Mcu.Pin43=PE0
+Mcu.Pin44=PD5
+Mcu.Pin45=PB3
+Mcu.Pin42=PC12
+Mcu.Pin43=PD4
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 ProjectManager.LastFirmware=true
 USB_HOST.VirtualModeFS=Cdc
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PB2.GPIO_Mode=GPIO_MODE_INPUT
-Mcu.Pin37=PD5
-Mcu.Pin38=PB3
-Mcu.Pin35=PC12
-Mcu.Pin36=PD4
+Mcu.Pin37=PA12
+Mcu.Pin38=PA13
+Mcu.Pin35=PA10
+Mcu.Pin36=PA11
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin39=PB6
-Mcu.Pin30=PA12
+Mcu.Pin39=PA14
+Mcu.Pin30=PD13
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PA15
+Mcu.Pin33=PC7
+TIM3.IPParameters=Prescaler,AutoReloadPreload,Period
 PE3.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin34=PC10
-Mcu.Pin31=PA13
-Mcu.Pin32=PA14
+Mcu.Pin34=PA9
+Mcu.Pin31=PD14
+Mcu.Pin32=PD15
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -171,26 +196,28 @@ PH1-OSC_OUT.GPIO_Label=PH1-OSC_OUT
 TIM2.Period=2000
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-Mcu.Pin26=PC7
-Mcu.Pin27=PA9
+Mcu.Pin26=PD9
+Mcu.Pin27=PD10
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PD14
+Mcu.Pin24=PB15
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PD15
+Mcu.Pin25=PD8
+Mcu.Pin28=PD11
 PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
-Mcu.Pin28=PA10
-Mcu.Pin29=PA11
-PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+Mcu.Pin29=PD12
 PA4.Signal=I2S3_WS
-Mcu.Pin22=PD12
+PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+Mcu.Pin22=PB13
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin23=PD13
-Mcu.Pin20=PB13
-Mcu.Pin21=PB15
+Mcu.Pin23=PB14
+Mcu.Pin20=PB11
+Mcu.Pin21=PB12
+PD10.Locked=true
 PA5.GPIO_Label=SPI1_SCK [LIS302DL_SCL/SPC]
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 PE3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PD11.Signal=GPIO_Output
 PA14.GPIOParameters=GPIO_Label
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PE5.GPIO_Label=RESET_LCD
@@ -220,10 +247,12 @@ PC3.GPIO_Label=PDM_OUT [MP45DT02_DOUT]
 PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
 I2S3.Instance=SPI$Index
 SH.GPXTI1.ConfNb=1
+PB12.GPIO_PuPd=GPIO_PULLUP
 SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
 USB_HOST0.BSP.mode=Output
 PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC0.Locked=true
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
 Mcu.Family=STM32F4
 SH.GPXTI1.0=GPIO_EXTI1
 ProjectManager.MainLocation=Core/Src
@@ -233,12 +262,13 @@ RCC.CortexFreq_Value=168000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F407VGTx
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PD9.GPIOParameters=PinState,GPIO_Label
 PC10.Locked=true
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Signal=I2S3_CK
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2S3_Init-I2S3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_HOST_Init-USB_HOST-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2S3_Init-I2S3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_HOST_Init-USB_HOST-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -248,7 +278,10 @@ PA11.Mode=Host_Only
 PH0-OSC_IN.GPIOParameters=GPIO_Label
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA11.GPIO_PuPd=GPIO_NOPULL
+PB11.GPIO_PuPd=GPIO_PULLUP
+PB11.Signal=GPIO_Input
 PB15.Signal=SPI2_MOSI
+PD11.PinState=GPIO_PIN_RESET
 PE5.GPIOParameters=GPIO_Speed,GPIO_Label
 ProjectManager.StackSize=0x400
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
@@ -266,11 +299,14 @@ PA12.Signal=USB_OTG_FS_DP
 PE4.GPIOParameters=GPIO_Speed,GPIO_Label
 Mcu.UserConstants=
 Mcu.ThirdPartyNb=0
+PD11.GPIO_Label=KEYBOARD_ROW_1
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=10
+Mcu.IPNb=11
 RCC.I2SClocksFreq_Value=96000000
 ProjectManager.PreviousToolchain=
+TIM3.Period=42000
 RCC.VcooutputI2S=96000000
+PD8.GPIOParameters=PinState,GPIO_Label
 TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
 Mcu.Pin6=PC14-OSC32_IN
 Mcu.Pin7=PC15-OSC32_OUT
@@ -289,10 +325,12 @@ PA9.GPIO_Mode=GPIO_MODE_INPUT
 Mcu.Pin3=PE5
 Mcu.Pin4=PE6
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PD10.GPIOParameters=PinState,GPIO_Label
 Mcu.Pin5=PC13-ANTI_TAMP
 RCC.HSE_VALUE=8000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA4.GPIO_PuPd=GPIO_NOPULL
+Mcu.IP10=USB_OTG_FS
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.GPIO_PuPd=GPIO_NOPULL
@@ -300,6 +338,7 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 RCC.VCOInputFreq_Value=1000000
 PA14.Mode=Serial_Wire
 PE4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+TIM3.Prescaler=1
 File.Version=6
 PA10.GPIO_Label=OTG_FS_ID
 PC7.GPIO_Mode=GPIO_MODE_AF_PP
@@ -315,8 +354,8 @@ PE6.GPIOParameters=GPIO_Speed,GPIO_Label
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
 ProjectManager.ProjectName=STM32F407
 PA13.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=T_CLK
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
+PB7.GPIO_Label=T_CLK
 USB_HOST0.BSP.i2caddr=0
 PD13.GPIO_Label=LD3 [Orange Led]
 PA6.Signal=SPI1_MISO
@@ -325,8 +364,8 @@ USB_HOST.USBH_HandleTypeDef-CDC_FS=hUsbHostFS
 PD5.GPIO_Label=OTG_FS_OverCurrent
 NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.ToolChainLocation=
-PD15.GPIO_PuPd=GPIO_NOPULL
 PD14.Locked=true
+PD15.GPIO_PuPd=GPIO_NOPULL
 RCC.LSI_VALUE=32000
 SH.GPXTI0.0=GPIO_EXTI0
 USB_OTG_FS.VirtualMode=Host_Only
@@ -341,6 +380,7 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 PC0.GPIO_PuPd=GPIO_NOPULL
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 PE2.GPIO_Label=T_MOSI
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
 PC14-OSC32_IN.Locked=true
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB3.Locked=true
@@ -363,10 +403,12 @@ PC10.Mode=Half_Duplex_Master
 USB_HOST.BSP.number=1
 ProjectManager.DefaultFWLocation=true
 PC2.Mode=Full_Duplex_Master
+PD9.Signal=GPIO_Output
 PD5.Signal=GPIO_Input
+PB12.Locked=true
 ProjectManager.DeletePrevious=true
-VP_RNG_VS_RNG.Mode=RNG_Activate
 PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
+VP_RNG_VS_RNG.Mode=RNG_Activate
 PB10.Locked=true
 boardIOC=true
 PA9.GPIO_PuPd=GPIO_NOPULL
@@ -374,6 +416,7 @@ PA12.GPIO_Label=OTG_FS_DP
 RCC.FamilyName=M
 TIM2.Pulse-PWM\ Generation1\ CH1=100
 PA0-WKUP.Locked=true
+PD8.GPIO_Label=KEYBOARD_ROW_4
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
 PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PD12.Locked=true
@@ -394,6 +437,8 @@ SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 PE2.GPIOParameters=GPIO_Speed,GPIO_Label
 ProjectManager.RegisterCallBack=
 PE0.Locked=true
+PD10.GPIO_Label=KEYBOARD_ROW_2
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PA7.GPIO_PuPd=GPIO_NOPULL
 RCC.VCOI2SOutputFreq_Value=192000000
@@ -404,6 +449,7 @@ RCC.VCOOutputFreq_Value=336000000
 PC13-ANTI_TAMP.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB9.GPIO_Mode=GPIO_MODE_AF_OD
+PD11.GPIOParameters=PinState,GPIO_Label
 PA12.GPIO_Mode=GPIO_MODE_AF_PP
 PA4.GPIO_Mode=GPIO_MODE_AF_PP
 RCC.APB2Freq_Value=84000000
@@ -411,9 +457,9 @@ USB_HOST0.BSP.api=Unknown
 MxCube.Version=6.2.1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PD4.GPIO_Label=Audio_RST [CS43L22_RESET]
-VP_SYS_VS_Systick.Mode=SysTick
-PD4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
+PD4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+VP_SYS_VS_Systick.Mode=SysTick
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PD13.GPIO_PuPd=GPIO_NOPULL
 PD5.GPIO_PuPd=GPIO_NOPULL
@@ -427,8 +473,8 @@ Mcu.Name=STM32F407V(E-G)Tx
 PE0.Signal=GPIO_Input
 PA13.GPIO_Label=SWDIO
 PB2.Locked=true
-Mcu.IP8=USB_HOST
-Mcu.IP9=USB_OTG_FS
+Mcu.IP8=TIM3
+Mcu.IP9=USB_HOST
 PD14.Signal=GPIO_Output
 Mcu.IP6=SYS
 Mcu.IP7=TIM2
@@ -445,6 +491,7 @@ PA13.Locked=true
 PH1-OSC_OUT.GPIOParameters=GPIO_Label
 PA14.Signal=SYS_JTCK-SWCLK
 PB2.GPIO_Label=BOOT1
+PD10.PinState=GPIO_PIN_RESET
 RCC.HSI_VALUE=16000000
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 RCC.PLLQ=7
@@ -457,11 +504,15 @@ PB8.Signal=GPIO_Output
 PE3.GPIO_Label=CS_I2C/SPI [LIS302DL_CS_I2C/SPI]
 PC7.Mode=Master_Clock_Activated
 PA11.GPIO_Mode=GPIO_MODE_AF_PP
+PD9.Locked=true
 RCC.APB1Freq_Value=42000000
 PA5.GPIO_Mode=GPIO_MODE_AF_PP
+PD8.PinState=GPIO_PIN_RESET
 PB8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB11.Locked=true
 ProjectManager.DeviceId=STM32F407VGTx
+PB12.Signal=GPIO_Input
 ProjectManager.LibraryCopy=1
 PC3.GPIO_PuPd=GPIO_NOPULL
 PD12.GPIO_PuPd=GPIO_NOPULL
