Timer 1. Encoder mode. Connect and first test run in main loop. Print value on LCD.

--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -5,6 +5,7 @@ PD12.GPIO_Label=LD4 [Green Led]
 PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PC10.GPIO_PuPd=GPIO_NOPULL
+PE11.GPIOParameters=GPIO_PuPd
 SPI1.VirtualType=VM_MASTER
 PB10.GPIO_PuPd=GPIO_NOPULL
 SPI2.VirtualType=VM_MASTER
@@ -23,6 +24,7 @@ PC3.Locked=true
 RCC.RTCFreq_Value=32000
 PA6.GPIO_Label=SPI1_MISO [LIS302DL_SDO]
 PD4.Locked=true
+SH.S_TIM1_CH1.ConfNb=1
 PB13.Signal=SPI2_SCK
 PC15-OSC32_OUT.GPIO_Label=PC15-OSC32_OUT
 PinOutPanel.RotationAngle=0
@@ -36,7 +38,7 @@ PD15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA4.Mode=Half_Duplex_Master
 SPI1.Direction=SPI_DIRECTION_2LINES
 I2S3.AudioFreq-Half_Duplex_Master=I2S_AUDIOFREQ_96K
-TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger,ClockDivision,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1
+TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger,ClockDivision
 PD4.Signal=GPIO_Output
 RCC.APB2TimFreq_Value=168000000
 PB6.Signal=GPIO_Output
@@ -57,9 +59,11 @@ PC13-ANTI_TAMP.Signal=GPIO_Input
 PB12.GPIO_Label=KEYBOARD_COLUMN_2
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
 MxDb.Version=DB.6.0.21
+PE15.Locked=true
 I2S3.ErrorAudioFreq=-2.34 %
 PE0.GPIOParameters=GPIO_PuPd,GPIO_Label
 ProjectManager.BackupPrevious=false
+PE9.Signal=S_TIM1_CH1
 PA5.GPIO_PuPd=GPIO_NOPULL
 I2S3.ErrorAudioFreq-Half_Duplex_Master=0.8 %
 NVIC.TIM2_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
@@ -114,7 +118,7 @@ PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
 PD9.GPIO_Label=KEYBOARD_ROW_3
-Mcu.PinsNb=57
+Mcu.PinsNb=60
 PD9.PinState=GPIO_PIN_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC13-ANTI_TAMP.GPIO_Label=T_IRQ
@@ -129,7 +133,6 @@ PB14.Locked=true
 PC0.Signal=GPIO_Output
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
-SH.S_TIM2_CH1_ETR.ConfNb=1
 PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
 PA0-WKUP.Signal=GPXTI0
@@ -142,53 +145,59 @@ PB8.GPIO_Label=T_CS
 PA11.Locked=true
 PB10.GPIO_Mode=GPIO_MODE_AF_PP
 PC15-OSC32_OUT.Locked=true
-Mcu.Pin51=PE1
-Mcu.Pin52=VP_RNG_VS_RNG
-Mcu.Pin50=PE0
-Mcu.Pin55=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin56=VP_USB_HOST_VS_USB_HOST_CDC_FS
-Mcu.Pin53=VP_SYS_VS_Systick
-Mcu.Pin54=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin59=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin57=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM3_VS_no_output1
+VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
+Mcu.Pin51=PB9
+Mcu.Pin52=PE0
+Mcu.Pin50=PB8
+Mcu.Pin55=VP_SYS_VS_Systick
+Mcu.Pin56=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin53=PE1
+Mcu.Pin54=VP_RNG_VS_RNG
 PA9.Signal=USB_OTG_FS_VBUS
 PB11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB9.Locked=true
 I2S3.VirtualMode=I2S_MODE_MASTER
 PC7.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin48=PB8
-Mcu.Pin49=PB9
-Mcu.Pin46=PB6
-Mcu.Pin47=PB7
+Mcu.Pin48=PB6
+Mcu.Pin49=PB7
+Mcu.Pin46=PD5
+Mcu.Pin47=PB3
 PB10.Signal=I2S2_CK
 PB14.Signal=GPIO_Input
 PA5.Signal=SPI1_SCK
-Mcu.Pin40=PA15
-Mcu.Pin41=PC10
+Mcu.Pin40=PA12
+Mcu.Pin41=PA13
 PC12.Mode=Half_Duplex_Master
-Mcu.Pin44=PD5
-Mcu.Pin45=PB3
-Mcu.Pin42=PC12
-Mcu.Pin43=PD4
+Mcu.Pin44=PC12
+Mcu.Pin45=PD4
+Mcu.Pin42=PA14
+Mcu.Pin43=PC10
+VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 ProjectManager.LastFirmware=true
 USB_HOST.VirtualModeFS=Cdc
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PB2.GPIO_Mode=GPIO_MODE_INPUT
-Mcu.Pin37=PA12
-Mcu.Pin38=PA13
-Mcu.Pin35=PA10
-Mcu.Pin36=PA11
+PE15.Signal=GPIO_Input
+Mcu.Pin37=PA9
+Mcu.Pin38=PA10
+Mcu.Pin35=PD15
+Mcu.Pin36=PC7
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin39=PA14
-Mcu.Pin30=PD13
+Mcu.Pin39=PA11
+Mcu.Pin30=PD10
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PC7
-TIM3.IPParameters=Prescaler,AutoReloadPreload,Period
+Mcu.Pin33=PD13
+TIM3.IPParameters=Prescaler,AutoReloadPreload,Period,Channel-PWM Generation1 No Output
 PE3.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin34=PA9
-Mcu.Pin31=PD14
-Mcu.Pin32=PD15
+Mcu.Pin34=PD14
+Mcu.Pin31=PD11
+Mcu.Pin32=PD12
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -196,22 +205,22 @@ PH1-OSC_OUT.GPIO_Label=PH1-OSC_OUT
 TIM2.Period=2000
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-Mcu.Pin26=PD9
-Mcu.Pin27=PD10
+Mcu.Pin26=PB14
+Mcu.Pin27=PB15
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PB15
+Mcu.Pin24=PB12
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PD8
-Mcu.Pin28=PD11
+Mcu.Pin25=PB13
+Mcu.Pin28=PD8
 PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
-Mcu.Pin29=PD12
+Mcu.Pin29=PD9
 PA4.Signal=I2S3_WS
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-Mcu.Pin22=PB13
+Mcu.Pin22=PB10
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin23=PB14
-Mcu.Pin20=PB11
-Mcu.Pin21=PB12
+Mcu.Pin23=PB11
+Mcu.Pin20=PE11
+Mcu.Pin21=PE15
 PD10.Locked=true
 PA5.GPIO_Label=SPI1_SCK [LIS302DL_SCL/SPC]
 PA10.Locked=true
@@ -225,14 +234,13 @@ PC12.GPIO_Label=I2S3_SD [CS43L22_SDIN]
 ProjectManager.CompilerOptimize=6
 PD15.Locked=true
 PA11.Signal=USB_OTG_FS_DM
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 ProjectManager.HeapSize=0x200
 Mcu.Pin15=PA5
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 Mcu.Pin16=PA6
 Mcu.Pin13=PA0-WKUP
 Mcu.Pin14=PA4
-Mcu.Pin19=PB10
+Mcu.Pin19=PE9
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PA7
 Mcu.Pin18=PB2
@@ -268,7 +276,7 @@ PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Signal=I2S3_CK
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2S3_Init-I2S3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_HOST_Init-USB_HOST-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2S3_Init-I2S3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_HOST_Init-USB_HOST-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -298,10 +306,11 @@ Mcu.IP1=NVIC
 PA12.Signal=USB_OTG_FS_DP
 PE4.GPIOParameters=GPIO_Speed,GPIO_Label
 Mcu.UserConstants=
+PE11.GPIO_PuPd=GPIO_PULLUP
 Mcu.ThirdPartyNb=0
 PD11.GPIO_Label=KEYBOARD_ROW_1
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=11
+Mcu.IPNb=12
 RCC.I2SClocksFreq_Value=96000000
 ProjectManager.PreviousToolchain=
 TIM3.Period=10000
@@ -330,15 +339,16 @@ Mcu.Pin5=PC13-ANTI_TAMP
 RCC.HSE_VALUE=8000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA4.GPIO_PuPd=GPIO_NOPULL
-Mcu.IP10=USB_OTG_FS
+Mcu.IP10=USB_HOST
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+Mcu.IP11=USB_OTG_FS
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.GPIO_PuPd=GPIO_NOPULL
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 RCC.VCOInputFreq_Value=1000000
 PA14.Mode=Serial_Wire
 PE4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-TIM3.Prescaler=4200
+TIM3.Prescaler=2099
 File.Version=6
 PA10.GPIO_Label=OTG_FS_ID
 PC7.GPIO_Mode=GPIO_MODE_AF_PP
@@ -347,7 +357,6 @@ PB3.GPIOParameters=GPIO_Label
 PE3.Locked=true
 PB7.Signal=GPIO_Output
 PB8.Locked=true
-TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 USB_HOST0.BSP.i2creg=0
 PE4.Signal=GPIO_Output
 PE6.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -369,7 +378,6 @@ PD15.GPIO_PuPd=GPIO_NOPULL
 RCC.LSI_VALUE=32000
 SH.GPXTI0.0=GPIO_EXTI0
 USB_OTG_FS.VirtualMode=Host_Only
-PA15.Signal=S_TIM2_CH1_ETR
 PE0.GPIO_Label=T_MISO
 PA10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
@@ -414,8 +422,9 @@ boardIOC=true
 PA9.GPIO_PuPd=GPIO_NOPULL
 PA12.GPIO_Label=OTG_FS_DP
 RCC.FamilyName=M
-TIM2.Pulse-PWM\ Generation1\ CH1=100
 PA0-WKUP.Locked=true
+PE9.GPIOParameters=GPIO_PuPd
+PE15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD8.GPIO_Label=KEYBOARD_ROW_4
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
 PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -426,6 +435,8 @@ PD4.GPIO_PuPd=GPIO_NOPULL
 PA9.Mode=Activate_VBUS
 PC0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 I2S3.RealAudioFreq-Half_Duplex_Master=96.774 KHz
+SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
+PE15.GPIO_Label=encoder_button
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 ProjectManager.TargetToolchain=STM32CubeIDE
 PB10.GPIO_Label=CLK_IN [MP45DT02_CLK]
@@ -439,8 +450,11 @@ ProjectManager.RegisterCallBack=
 PE0.Locked=true
 PD10.GPIO_Label=KEYBOARD_ROW_2
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+PE11.Signal=S_TIM1_CH2
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PA7.GPIO_PuPd=GPIO_NOPULL
+TIM3.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
+SH.S_TIM1_CH2.ConfNb=1
 RCC.VCOI2SOutputFreq_Value=192000000
 board=STM32F407G-DISC1
 PD13.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -455,6 +469,7 @@ PA4.GPIO_Mode=GPIO_MODE_AF_PP
 RCC.APB2Freq_Value=84000000
 USB_HOST0.BSP.api=Unknown
 MxCube.Version=6.2.1
+SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PD4.GPIO_Label=Audio_RST [CS43L22_RESET]
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -473,11 +488,11 @@ Mcu.Name=STM32F407V(E-G)Tx
 PE0.Signal=GPIO_Input
 PA13.GPIO_Label=SWDIO
 PB2.Locked=true
-Mcu.IP8=TIM3
-Mcu.IP9=USB_HOST
+Mcu.IP8=TIM2
+Mcu.IP9=TIM3
 PD14.Signal=GPIO_Output
 Mcu.IP6=SYS
-Mcu.IP7=TIM2
+Mcu.IP7=TIM1
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=48000000
 PB3.Signal=SYS_JTDO-SWO
@@ -491,6 +506,7 @@ PA13.Locked=true
 PH1-OSC_OUT.GPIOParameters=GPIO_Label
 PA14.Signal=SYS_JTCK-SWCLK
 PB2.GPIO_Label=BOOT1
+PE15.GPIO_PuPd=GPIO_PULLUP
 PD10.PinState=GPIO_PIN_RESET
 RCC.HSI_VALUE=16000000
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -519,5 +535,6 @@ PD12.GPIO_PuPd=GPIO_NOPULL
 PE1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA7.Signal=SPI1_MOSI
 USB_HOST0.BSP.instance=PC0
+PE9.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 isbadioc=false
