--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -68,10 +68,12 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 I2S3.ErrorAudioFreq-Half_Duplex_Master=0.8 %
 NVIC.TIM2_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
 PE4.GPIO_Label=CS_LCD
+PC9.Mode=I2C
 SPI2.CalculateBaudRate=21.0 MBits/s
 PH1-OSC_OUT.Locked=true
 PD5.GPIO_Mode=GPIO_MODE_INPUT
 PE2.Signal=GPIO_Output
+PA8.Signal=I2C3_SCL
 PD14.GPIO_PuPd=GPIO_NOPULL
 PE1.Locked=true
 PB6.Locked=true
@@ -104,7 +106,7 @@ PB13.Mode=Full_Duplex_Master
 PE6.Locked=true
 PC12.GPIO_PuPd=GPIO_NOPULL
 PC15-OSC32_OUT.GPIOParameters=GPIO_Label
-PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA12.GPIO_PuPd=GPIO_NOPULL
 PD5.Locked=true
 PE6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -118,9 +120,10 @@ PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
 PD9.GPIO_Label=KEYBOARD_ROW_3
-Mcu.PinsNb=60
+Mcu.PinsNb=63
 PD9.PinState=GPIO_PIN_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+PC11.Locked=true
 PC13-ANTI_TAMP.GPIO_Label=T_IRQ
 PA9.GPIO_Label=VBUS_FS
 PC2.Signal=SPI2_MISO
@@ -133,6 +136,10 @@ PB14.Locked=true
 PC0.Signal=GPIO_Output
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC11.GPIOParameters=GPIO_Label
+Mcu.Pin62=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin60=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin61=VP_TIM3_VS_no_output1
 PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
 PA0-WKUP.Signal=GPXTI0
@@ -145,51 +152,51 @@ PB8.GPIO_Label=T_CS
 PA11.Locked=true
 PB10.GPIO_Mode=GPIO_MODE_AF_PP
 PC15-OSC32_OUT.Locked=true
-Mcu.Pin59=VP_USB_HOST_VS_USB_HOST_CDC_FS
-Mcu.Pin57=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin58=VP_TIM3_VS_no_output1
+Mcu.Pin59=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin57=VP_RNG_VS_RNG
+Mcu.Pin58=VP_SYS_VS_Systick
 VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
-Mcu.Pin51=PB9
-Mcu.Pin52=PE0
-Mcu.Pin50=PB8
-Mcu.Pin55=VP_SYS_VS_Systick
-Mcu.Pin56=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin53=PE1
-Mcu.Pin54=VP_RNG_VS_RNG
+Mcu.Pin51=PB6
+Mcu.Pin52=PB7
+Mcu.Pin50=PB3
+Mcu.Pin55=PE0
+Mcu.Pin56=PE1
+Mcu.Pin53=PB8
+Mcu.Pin54=PB9
 PA9.Signal=USB_OTG_FS_VBUS
 PB11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB9.Locked=true
 I2S3.VirtualMode=I2S_MODE_MASTER
 PC7.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin48=PB6
-Mcu.Pin49=PB7
-Mcu.Pin46=PD5
-Mcu.Pin47=PB3
+Mcu.Pin48=PD4
+Mcu.Pin49=PD5
+Mcu.Pin46=PC11
+Mcu.Pin47=PC12
 PB10.Signal=I2S2_CK
 PB14.Signal=GPIO_Input
 PA5.Signal=SPI1_SCK
-Mcu.Pin40=PA12
-Mcu.Pin41=PA13
+Mcu.Pin40=PA10
+Mcu.Pin41=PA11
+Mcu.Pin44=PA14
 PC12.Mode=Half_Duplex_Master
-Mcu.Pin44=PC12
-Mcu.Pin45=PD4
-Mcu.Pin42=PA14
-Mcu.Pin43=PC10
+Mcu.Pin45=PC10
+Mcu.Pin42=PA12
+Mcu.Pin43=PA13
 VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 ProjectManager.LastFirmware=true
 USB_HOST.VirtualModeFS=Cdc
-PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PB2.GPIO_Mode=GPIO_MODE_INPUT
 PE15.Signal=GPIO_Input
-Mcu.Pin37=PA9
-Mcu.Pin38=PA10
+Mcu.Pin37=PC9
+Mcu.Pin38=PA8
 Mcu.Pin35=PD15
 Mcu.Pin36=PC7
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin39=PA11
+Mcu.Pin39=PA9
 Mcu.Pin30=PD10
 RCC.EthernetFreq_Value=168000000
 Mcu.Pin33=PD13
@@ -253,6 +260,7 @@ PE2.Locked=true
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC3.GPIO_Label=PDM_OUT [MP45DT02_DOUT]
 PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
+PA8.Mode=I2C
 I2S3.Instance=SPI$Index
 SH.GPXTI1.ConfNb=1
 PB12.GPIO_PuPd=GPIO_PULLUP
@@ -294,15 +302,15 @@ PE5.GPIOParameters=GPIO_Speed,GPIO_Label
 ProjectManager.StackSize=0x400
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 PD13.Signal=GPIO_Output
-Mcu.IP4=SPI1
+Mcu.IP4=RNG
 RCC.FCLKCortexFreq_Value=168000000
-Mcu.IP5=SPI2
+Mcu.IP5=SPI1
 PD13.Locked=true
-Mcu.IP2=RCC
-Mcu.IP3=RNG
-Mcu.IP0=I2S3
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP0=I2C3
 PA12.Locked=true
-Mcu.IP1=NVIC
+Mcu.IP1=I2S3
 PA12.Signal=USB_OTG_FS_DP
 PE4.GPIOParameters=GPIO_Speed,GPIO_Label
 Mcu.UserConstants=
@@ -310,7 +318,7 @@ PE11.GPIO_PuPd=GPIO_PULLUP
 Mcu.ThirdPartyNb=0
 PD11.GPIO_Label=KEYBOARD_ROW_1
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=12
+Mcu.IPNb=13
 RCC.I2SClocksFreq_Value=96000000
 ProjectManager.PreviousToolchain=
 TIM3.Period=10000
@@ -323,7 +331,6 @@ Mcu.Pin8=PH0-OSC_IN
 Mcu.Pin9=PH1-OSC_OUT
 USB_HOST0.BSP.ip=GPIO
 RCC.AHBFreq_Value=168000000
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin0=PE2
 PH0-OSC_IN.GPIO_Label=PH0-OSC_IN
@@ -339,9 +346,10 @@ Mcu.Pin5=PC13-ANTI_TAMP
 RCC.HSE_VALUE=8000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA4.GPIO_PuPd=GPIO_NOPULL
-Mcu.IP10=USB_HOST
+Mcu.IP10=TIM3
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-Mcu.IP11=USB_OTG_FS
+Mcu.IP12=USB_OTG_FS
+Mcu.IP11=USB_HOST
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.GPIO_PuPd=GPIO_NOPULL
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -349,6 +357,7 @@ RCC.VCOInputFreq_Value=1000000
 PA14.Mode=Serial_Wire
 PE4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 TIM3.Prescaler=2099
+PC11.GPIO_Label=CS_M25Q
 File.Version=6
 PA10.GPIO_Label=OTG_FS_ID
 PC7.GPIO_Mode=GPIO_MODE_AF_PP
@@ -406,6 +415,7 @@ PB9.GPIO_Label=Audio_SDA [CS43L22_SDA]
 PC10.GPIO_Label=I2S3_SCK [CS43L22_SCLK]
 ProjectManager.NoMain=false
 SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,Mode,VirtualType,Direction,BaudRatePrescaler,CalculateBaudRate
+PC11.Signal=GPIO_Output
 USB_HOST0.BSP.solution=PC0
 PC10.Mode=Half_Duplex_Master
 USB_HOST.BSP.number=1
@@ -444,7 +454,7 @@ PB7.GPIOParameters=GPIO_Speed,GPIO_Label
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 PB2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE4.Locked=true
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 PE2.GPIOParameters=GPIO_Speed,GPIO_Label
 ProjectManager.RegisterCallBack=
 PE0.Locked=true
@@ -488,11 +498,11 @@ Mcu.Name=STM32F407V(E-G)Tx
 PE0.Signal=GPIO_Input
 PA13.GPIO_Label=SWDIO
 PB2.Locked=true
-Mcu.IP8=TIM2
-Mcu.IP9=TIM3
+Mcu.IP8=TIM1
+Mcu.IP9=TIM2
 PD14.Signal=GPIO_Output
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
+Mcu.IP6=SPI2
+Mcu.IP7=SYS
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=48000000
 PB3.Signal=SYS_JTDO-SWO
@@ -509,7 +519,7 @@ PB2.GPIO_Label=BOOT1
 PE15.GPIO_PuPd=GPIO_PULLUP
 PD10.PinState=GPIO_PIN_RESET
 RCC.HSI_VALUE=16000000
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.PLLQ=7
 I2S3.RealAudioFreq=93.75 KHz
 RCC.PLLM=8
@@ -518,6 +528,7 @@ PE5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB7.Locked=true
 PB8.Signal=GPIO_Output
 PE3.GPIO_Label=CS_I2C/SPI [LIS302DL_CS_I2C/SPI]
+PC9.Signal=I2C3_SDA
 PC7.Mode=Master_Clock_Activated
 PA11.GPIO_Mode=GPIO_MODE_AF_PP
 PD9.Locked=true
