--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -20,6 +20,7 @@ PC7.Locked=true
 I2S3.IPParameters=AudioFreq-Half_Duplex_Master,ErrorAudioFreq-Half_Duplex_Master,RealAudioFreq-Half_Duplex_Master,RealAudioFreq,ErrorAudioFreq,Instance,VirtualMode,FullDuplexMode
 PD8.Locked=true
 USB_HOST0.BSP.condition=
+PC6.GPIO_Label=CS_mcroSD
 PC3.Locked=true
 RCC.RTCFreq_Value=32000
 PA6.GPIO_Label=SPI1_MISO [LIS302DL_SDO]
@@ -120,12 +121,13 @@ PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
 PD9.GPIO_Label=KEYBOARD_ROW_3
-Mcu.PinsNb=63
+Mcu.PinsNb=64
 PD9.PinState=GPIO_PIN_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC11.Locked=true
 PC13-ANTI_TAMP.GPIO_Label=T_IRQ
 PA9.GPIO_Label=VBUS_FS
+PC6.Signal=GPIO_Output
 PC2.Signal=SPI2_MISO
 PB11.GPIO_Label=KEYBOARD_COLUMN_3
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
@@ -137,9 +139,10 @@ PC0.Signal=GPIO_Output
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC11.GPIOParameters=GPIO_Label
-Mcu.Pin62=VP_USB_HOST_VS_USB_HOST_CDC_FS
-Mcu.Pin60=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin61=VP_TIM3_VS_no_output1
+Mcu.Pin62=VP_TIM3_VS_no_output1
+Mcu.Pin63=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin60=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin61=VP_TIM3_VS_ClockSourceINT
 PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
 PA0-WKUP.Signal=GPXTI0
@@ -152,36 +155,37 @@ PB8.GPIO_Label=T_CS
 PA11.Locked=true
 PB10.GPIO_Mode=GPIO_MODE_AF_PP
 PC15-OSC32_OUT.Locked=true
-Mcu.Pin59=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin57=VP_RNG_VS_RNG
-Mcu.Pin58=VP_SYS_VS_Systick
+Mcu.Pin59=VP_SYS_VS_Systick
+Mcu.Pin57=PE1
+Mcu.Pin58=VP_RNG_VS_RNG
 VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
-Mcu.Pin51=PB6
-Mcu.Pin52=PB7
-Mcu.Pin50=PB3
-Mcu.Pin55=PE0
-Mcu.Pin56=PE1
-Mcu.Pin53=PB8
-Mcu.Pin54=PB9
+Mcu.Pin51=PB3
+Mcu.Pin52=PB6
+Mcu.Pin50=PD5
+Mcu.Pin55=PB9
+Mcu.Pin56=PE0
+Mcu.Pin53=PB7
+Mcu.Pin54=PB8
+PC6.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
 PB11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB9.Locked=true
 I2S3.VirtualMode=I2S_MODE_MASTER
 PC7.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin48=PD4
-Mcu.Pin49=PD5
-Mcu.Pin46=PC11
-Mcu.Pin47=PC12
+Mcu.Pin48=PC12
+Mcu.Pin49=PD4
+Mcu.Pin46=PC10
+Mcu.Pin47=PC11
 PB10.Signal=I2S2_CK
 PB14.Signal=GPIO_Input
 PA5.Signal=SPI1_SCK
-Mcu.Pin40=PA10
-Mcu.Pin41=PA11
-Mcu.Pin44=PA14
+Mcu.Pin40=PA9
+Mcu.Pin41=PA10
+Mcu.Pin44=PA13
 PC12.Mode=Half_Duplex_Master
-Mcu.Pin45=PC10
-Mcu.Pin42=PA12
-Mcu.Pin43=PA13
+Mcu.Pin45=PA14
+Mcu.Pin42=PA11
+Mcu.Pin43=PA12
 VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 ProjectManager.LastFirmware=true
@@ -190,13 +194,13 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PB2.GPIO_Mode=GPIO_MODE_INPUT
 PE15.Signal=GPIO_Input
-Mcu.Pin37=PC9
-Mcu.Pin38=PA8
+Mcu.Pin37=PC7
+Mcu.Pin38=PC9
 Mcu.Pin35=PD15
-Mcu.Pin36=PC7
+Mcu.Pin36=PC6
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin39=PA9
+Mcu.Pin39=PA8
 Mcu.Pin30=PD10
 RCC.EthernetFreq_Value=168000000
 Mcu.Pin33=PD13
@@ -284,7 +288,7 @@ PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Signal=I2S3_CK
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2S3_Init-I2S3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_HOST_Init-USB_HOST-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2S3_Init-I2S3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_HOST_Init-USB_HOST-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -517,6 +521,7 @@ PH1-OSC_OUT.GPIOParameters=GPIO_Label
 PA14.Signal=SYS_JTCK-SWCLK
 PB2.GPIO_Label=BOOT1
 PE15.GPIO_PuPd=GPIO_PULLUP
+PC6.GPIOParameters=GPIO_Label
 PD10.PinState=GPIO_PIN_RESET
 RCC.HSI_VALUE=16000000
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
