Added external interrupt on PIN: MOTION_SENSOR_9960 and detect rising edge trigger detection in HAL_GPIO_EXTI_Callback function on main.c file

--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -54,6 +54,7 @@ PE5.Signal=GPIO_Output
 PE10.Locked=true
 PE1.Signal=GPXTI1
 PE14.Locked=true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
@@ -82,7 +83,7 @@ PD14.GPIO_PuPd=GPIO_NOPULL
 PE1.Locked=true
 PB6.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PE10.Signal=GPIO_Input
+PE10.Signal=GPXTI10
 ProjectManager.HalAssertFull=false
 PB2.GPIO_PuPd=GPIO_NOPULL
 SPI1.CalculateBaudRate-Full_Duplex_Master=42.0 MBits/s
@@ -123,6 +124,7 @@ PC0.PinState=GPIO_PIN_SET
 NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA5.Mode=Full_Duplex_Master
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
+SH.GPXTI10.0=GPIO_EXTI10
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
 PD9.GPIO_Label=KEYBOARD_ROW_3
@@ -265,6 +267,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 Mcu.Pin11=PC2
 Mcu.Pin12=PC3
 Mcu.Pin10=PC0
+SH.GPXTI10.ConfNb=1
 PE3.Signal=GPIO_Output
 PE2.Locked=true
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
@@ -430,8 +433,8 @@ USB_HOST0.BSP.solution=PC0
 PC10.Mode=Half_Duplex_Master
 USB_HOST.BSP.number=1
 ProjectManager.DefaultFWLocation=true
-PE14.GPIO_Label=KEYBOARD_COLUMN_3
 PC2.Mode=Full_Duplex_Master
+PE14.GPIO_Label=KEYBOARD_COLUMN_3
 PD9.Signal=GPIO_Output
 PD5.Signal=GPIO_Input
 PB12.Locked=true
