--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -53,7 +53,6 @@ VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 PE5.Signal=GPIO_Output
 PE10.Locked=true
 PE1.Signal=GPXTI1
-PC1.PinState=GPIO_PIN_SET
 PE14.Locked=true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.ProjectBuild=false
@@ -62,7 +61,6 @@ USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
 PB2.Signal=GPIO_Input
 PA4.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Input
-PC1.GPIO_PuPd=GPIO_PULLUP
 PB12.GPIO_Label=KEYBOARD_COLUMN_2
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
 MxDb.Version=DB.6.0.21
@@ -220,7 +218,6 @@ PE3.GPIO_PuPd=GPIO_NOPULL
 Mcu.Pin34=PD11
 Mcu.Pin31=PD8
 Mcu.Pin32=PD9
-PC1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -285,7 +282,7 @@ SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
 USB_HOST0.BSP.mode=Output
 PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC0.Locked=true
-PC1.Signal=GPIO_Output
+PC1.Signal=GPIO_Input
 PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
 Mcu.Family=STM32F4
 SH.GPXTI1.0=GPIO_EXTI1
@@ -331,7 +328,7 @@ Mcu.IP1=I2C3
 PA12.Signal=USB_OTG_FS_DP
 PE4.GPIOParameters=GPIO_Speed,GPIO_Label
 Mcu.UserConstants=
-PC1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PC1.GPIOParameters=GPIO_Label
 PE11.GPIO_PuPd=GPIO_PULLUP
 Mcu.ThirdPartyNb=0
 PD11.GPIO_Label=KEYBOARD_ROW_1
