Started working with NRF24l01. Connect module, set up PINs, added .c .h files

--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -19,6 +19,7 @@ PD8.Locked=true
 PC6.GPIO_Label=CS_mcroSD
 PC3.Locked=true
 RCC.RTCFreq_Value=32000
+PA3.GPIOParameters=GPIO_Label
 PE10.GPIO_PuPd=GPIO_PULLUP
 PA6.GPIO_Label=SPI1_MISO [LIS302DL_SDO]
 PD4.Locked=true
@@ -61,6 +62,7 @@ PE15.Locked=true
 I2S3.ErrorAudioFreq=0.0 %
 PE0.GPIOParameters=GPIO_PuPd,GPIO_Label
 ProjectManager.BackupPrevious=false
+PC4.GPIO_Label=CSN_nrf
 PE9.Signal=S_TIM1_CH1
 PA5.GPIO_PuPd=GPIO_NOPULL
 NVIC.TIM2_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
@@ -112,6 +114,7 @@ PA4.GPIO_Label=I2S3_WS [CS43L22_LRCK]
 PD15.Signal=GPIO_Output
 ProjectManager.CustomerFirmwarePackage=
 PC0.PinState=GPIO_PIN_SET
+PC4.GPIOParameters=GPIO_Label
 NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA5.Mode=Full_Duplex_Master
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -119,7 +122,7 @@ SH.GPXTI10.0=GPIO_EXTI10
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_ENABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
 PD9.GPIO_Label=KEYBOARD_ROW_3
-Mcu.PinsNb=65
+Mcu.PinsNb=68
 PD9.PinState=GPIO_PIN_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC11.Locked=true
@@ -135,47 +138,50 @@ PC0.Signal=GPIO_Output
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC11.GPIOParameters=GPIO_Label
-Mcu.Pin62=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin63=VP_TIM3_VS_no_output1
-Mcu.Pin60=VP_SYS_VS_Systick
-Mcu.Pin61=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin64=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin62=VP_RNG_VS_RNG
+Mcu.Pin63=VP_SYS_VS_Systick
+Mcu.Pin60=PE0
+Mcu.Pin61=PE1
+Mcu.Pin66=VP_TIM3_VS_no_output1
+Mcu.Pin67=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin64=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin65=VP_TIM3_VS_ClockSourceINT
 PC3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PD10.Signal=GPIO_Output
 PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_Label=T_CS
 PA11.Locked=true
 PC15-OSC32_OUT.Locked=true
-Mcu.Pin59=VP_RNG_VS_RNG
-Mcu.Pin57=PE0
-Mcu.Pin58=PE1
+Mcu.Pin59=PB9
+Mcu.Pin57=PB7
+Mcu.Pin58=PB8
 PB11.Mode=I2C
 VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
-Mcu.Pin51=PB3
-Mcu.Pin52=PB4
-Mcu.Pin50=PD5
-Mcu.Pin55=PB8
-Mcu.Pin56=PB9
-Mcu.Pin53=PB6
-Mcu.Pin54=PB7
+Mcu.Pin51=PC12
+Mcu.Pin52=PD4
+Mcu.Pin50=PC11
+Mcu.Pin55=PB4
+Mcu.Pin56=PB6
+Mcu.Pin53=PD5
+Mcu.Pin54=PB3
 PC6.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
 PB9.Locked=true
 I2S3.VirtualMode=I2S_MODE_MASTER
-Mcu.Pin48=PC12
-Mcu.Pin49=PD4
-Mcu.Pin46=PC10
-Mcu.Pin47=PC11
+Mcu.Pin48=PA14
+Mcu.Pin49=PC10
+Mcu.Pin46=PA12
+Mcu.Pin47=PA13
 PB10.Signal=I2C2_SCL
 PB14.Signal=GPIO_Input
 PA5.Signal=SPI1_SCK
-Mcu.Pin40=PA8
-Mcu.Pin41=PA9
-Mcu.Pin44=PA13
+Mcu.Pin40=PD15
+Mcu.Pin41=PC6
+Mcu.Pin44=PA9
 PC12.Mode=Full_Duplex_Master
-Mcu.Pin45=PA14
-Mcu.Pin42=PA11
-Mcu.Pin43=PA12
+Mcu.Pin45=PA11
+Mcu.Pin42=PC9
+Mcu.Pin43=PA8
 VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 ProjectManager.LastFirmware=true
@@ -185,21 +191,21 @@ NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PB2.GPIO_Mode=GPIO_MODE_INPUT
 PE14.Signal=GPIO_Input
 PE15.Signal=GPIO_Input
-Mcu.Pin37=PD15
-Mcu.Pin38=PC6
-Mcu.Pin35=PD13
-Mcu.Pin36=PD14
+Mcu.Pin37=PD12
+Mcu.Pin38=PD13
+Mcu.Pin35=PD10
+Mcu.Pin36=PD11
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin39=PC9
-Mcu.Pin30=PD8
+Mcu.Pin39=PD14
+Mcu.Pin30=PB13
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PD11
+Mcu.Pin33=PD8
 TIM3.IPParameters=Prescaler,AutoReloadPreload,Period,Channel-PWM Generation1 No Output
 PE3.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin34=PD12
-Mcu.Pin31=PD9
-Mcu.Pin32=PD10
+Mcu.Pin34=PD9
+Mcu.Pin31=PB14
+Mcu.Pin32=PB15
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -207,21 +213,22 @@ PH1-OSC_OUT.GPIO_Label=PH1-OSC_OUT
 TIM2.Period=2000
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-Mcu.Pin26=PB12
-Mcu.Pin27=PB13
+Mcu.Pin26=PE15
+Mcu.Pin27=PB10
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PB10
+Mcu.Pin24=PE11
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PB11
-Mcu.Pin28=PB14
-Mcu.Pin29=PB15
+Mcu.Pin25=PE14
+Mcu.Pin28=PB11
+Mcu.Pin29=PB12
 PA4.Signal=I2S3_WS
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-Mcu.Pin22=PE14
+Mcu.Pin22=PE9
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin23=PE15
-Mcu.Pin20=PE10
-Mcu.Pin21=PE11
+Mcu.Pin23=PE10
+Mcu.Pin20=PC5
+PA3.Locked=true
+Mcu.Pin21=PB2
 PD10.Locked=true
 PA5.GPIO_Label=SPI1_SCK [LIS302DL_SCL/SPC]
 NVIC.ForceEnableDMAVector=true
@@ -235,15 +242,15 @@ ProjectManager.CompilerOptimize=6
 PD15.Locked=true
 PA11.Signal=USB_OTG_FS_DM
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA5
+Mcu.Pin15=PA4
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-Mcu.Pin16=PA6
+Mcu.Pin16=PA5
 Mcu.Pin13=PC3
-Mcu.Pin14=PA4
-Mcu.Pin19=PE9
+Mcu.Pin14=PA3
+Mcu.Pin19=PC4
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PA7
-Mcu.Pin18=PB2
+Mcu.Pin17=PA6
+Mcu.Pin18=PA7
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 Mcu.Pin11=PC1
 Mcu.Pin12=PC2
@@ -274,6 +281,7 @@ PD9.GPIOParameters=PinState,GPIO_Label
 PC10.Locked=true
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Signal=I2S3_CK
+PC5.Locked=true
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_HOST_Init-USB_HOST-false-HAL-false,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_RNG_Init-RNG-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_I2C2_Init-I2C2-false-HAL-true,12-MX_I2S3_Init-I2S3-false-HAL-true
@@ -324,8 +332,8 @@ Mcu.Pin8=PH0-OSC_IN
 Mcu.Pin9=PH1-OSC_OUT
 RCC.AHBFreq_Value=168000000
 PH0-OSC_IN.Mode=HSE-External-Oscillator
-PH0-OSC_IN.GPIO_Label=PH0-OSC_IN
 Mcu.Pin0=PE2
+PH0-OSC_IN.GPIO_Label=PH0-OSC_IN
 Mcu.Pin1=PE3
 GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PE4
@@ -378,8 +386,10 @@ USB_OTG_FS.VirtualMode=Host_Only
 PE0.GPIO_Label=T_MISO
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC4.Locked=true
 PC14-OSC32_IN.GPIO_Label=PC14-OSC32_IN
 SPI2.Direction=SPI_DIRECTION_2LINES
+PC5.Signal=GPIO_Input
 PC0.GPIO_PuPd=GPIO_NOPULL
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 PE2.GPIO_Label=T_MOSI
@@ -388,6 +398,7 @@ PC14-OSC32_IN.Locked=true
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB3.Locked=true
 PB4.Signal=I2S3_ext_SD
+PA3.Signal=GPIO_Output
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB3.GPIO_Label=SWO
@@ -404,6 +415,7 @@ PC10.GPIO_Label=I2S3_SCK [CS43L22_SCLK]
 ProjectManager.NoMain=false
 SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,Mode,VirtualType,Direction,BaudRatePrescaler,CalculateBaudRate
 PC11.Signal=GPIO_Output
+PC4.Signal=GPIO_Output
 PC10.Mode=Full_Duplex_Master
 ProjectManager.DefaultFWLocation=true
 PE14.GPIO_Label=KEYBOARD_COLUMN_3
@@ -434,6 +446,7 @@ PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 ProjectManager.TargetToolchain=STM32CubeIDE
 PB7.GPIOParameters=GPIO_Speed,GPIO_Label
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
+PC5.GPIOParameters=GPIO_Label
 PB2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE4.Locked=true
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
@@ -493,6 +506,7 @@ PA7.GPIO_Label=SPI1_MOSI [LIS302DL_SDA/SDI/SDO]
 PA12.Mode=Host_Only
 KeepUserPlacement=false
 VP_USB_HOST_VS_USB_HOST_CDC_FS.Mode=CDC_FS
+PC5.GPIO_Label=IRQ_nrf
 PA13.Locked=true
 PH1-OSC_OUT.GPIOParameters=GPIO_Label
 PA14.Signal=SYS_JTCK-SWCLK
@@ -524,6 +538,7 @@ ProjectManager.LibraryCopy=1
 PC3.GPIO_PuPd=GPIO_NOPULL
 PD12.GPIO_PuPd=GPIO_NOPULL
 PE1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA3.GPIO_Label=CE_nrf
 PA7.Signal=SPI1_MOSI
 PE9.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
