Update init NRF

--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -19,11 +19,12 @@ PD8.Locked=true
 PC6.GPIO_Label=CS_mcroSD
 PC3.Locked=true
 RCC.RTCFreq_Value=32000
-PA3.GPIOParameters=PinState,GPIO_Label
+PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PE10.GPIO_PuPd=GPIO_PULLUP
 PA6.GPIO_Label=SPI1_MISO [LIS302DL_SDO]
 PD4.Locked=true
 SH.S_TIM1_CH1.ConfNb=1
+PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB13.Signal=SPI2_SCK
 PC15-OSC32_OUT.GPIO_Label=PC15-OSC32_OUT
 PinOutPanel.RotationAngle=0
@@ -352,7 +353,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Mcu.IP12=USB_HOST
 Mcu.IP11=TIM3
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PC4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PC4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.GPIO_PuPd=GPIO_NOPULL
 PB4.Mode=Full_Duplex_Master
 Mcu.IP13=USB_OTG_FS
